tp/tp4correccion.output
Rules useless in parser due to conflicts

   42 operUnario: error

   67 $@1: /* vacío */

   98 expOrDeclaracion: error


Estado 3 conflictos: 3 desplazamiento/reducción, 12 reducción/reducción
Estado 9 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 22 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 26 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 29 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 54 conflictos: 15 reducción(ones)/reducción(ones)
Estado 61 conflictos: 4 reducción(ones)/reducción(ones)
Estado 77 conflictos: 11 reducción(ones)/reducción(ones)
Estado 78 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 80 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 107 conflictos: 2 desplazamiento/reducción, 12 reducción/reducción
Estado 110 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 135 conflictos: 12 reducción(ones)/reducción(ones)
Estado 139 conflictos: 1 reducción(ones)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: '\n'
    4     | declaracionyDefinicionDeFunciones
    5     | sentencia

    6 expresion: expBinaria
    7          | expPostfijo operAsignacion expresion
    8          | error

    9 operAsignacion: '='
   10               | SUMAASIGNACION
   11               | RESTAASIGNACION
   12               | MULTIASIGNACION
   13               | DIVASIGNACION
   14               | RESTOASIGNACION
   15               | error

   16 expBinaria: expUnaria
   17           | expUnaria operBinario expBinaria

   18 operBinario: OR
   19            | AND
   20            | '<'
   21            | '>'
   22            | MENORIGUAL
   23            | MAYORIGUAL
   24            | DISTINTO
   25            | IGUALDAD
   26            | '+'
   27            | '-'
   28            | '*'
   29            | '/'
   30            | '%'
   31            | error

   32 expUnaria: expPostfijo
   33          | operUnario expUnaria
   34          | incremento expUnaria
   35          | expUnaria incremento

   36 incremento: INCREMENTO
   37           | DECREMENTO
   38           | error

   39 operUnario: '&'
   40           | '*'
   41           | '!'
   42           | error

   43 expPostfijo: expPrimaria
   44            | expPostfijo '[' expresion ']'
   45            | expPostfijo '(' listaDeArgumentos ')'

   46 listaDeArgumentos: expresion
   47                  | listaDeArgumentos ',' expresion
   48                  | /* vacío */

   49 expPrimaria: NUM
   50            | '(' expresion ')'
   51            | CCARACTER
   52            | LITERALESCADENA
   53            | IDENTIFICADOR
   54            | error

   55 sentencia: sentCompuesta
   56          | sentExpresion
   57          | sentSeleccion
   58          | sentIteracion
   59          | sentenciaDeclaracion
   60          | RETURN expOP ';'
   61          | error

   62 sentCompuesta: '{' opcionSalto listaSentencias '}'

   63 listaSentencias: sentencia opcionSalto listaSentencias
   64                | sentencia opcionSalto
   65                | /* vacío */

   66 sentExpresion: expresion ';'

   67 $@1: /* vacío */

   68 $@2: /* vacío */

   69 $@3: /* vacío */

   70 sentSeleccion: IF $@1 '(' expresion ')' $@2 sentCompuesta $@3 estructuraif

   71 $@4: /* vacío */

   72 $@5: /* vacío */

   73 $@6: /* vacío */

   74 sentSeleccion: SWITCH $@4 '(' expresion ')' $@5 sentCompuesta $@6

   75 $@7: /* vacío */

   76 $@8: /* vacío */

   77 sentSeleccion: IF '(' error $@7 ')' '{' '}' estructuraif $@8

   78 $@9: /* vacío */

   79 $@10: /* vacío */

   80 $@11: /* vacío */

   81 estructuraif: ELSEIF $@9 '(' expresion $@10 ')' sentCompuesta $@11 estructuraif

   82 $@12: /* vacío */

   83 estructuraif: ELSE $@12 sentCompuesta
   84             | /* vacío */

   85 $@13: /* vacío */

   86 $@14: /* vacío */

   87 sentIteracion: FOR $@13 '(' expOrDeclaracion ';' expOP ';' expOP ')' sentCompuesta $@14

   88 $@15: /* vacío */

   89 $@16: /* vacío */

   90 $@17: /* vacío */

   91 sentIteracion: WHILE $@15 '(' expresion $@16 ')' sentCompuesta $@17

   92 $@18: /* vacío */

   93 $@19: /* vacío */

   94 $@20: /* vacío */

   95 sentIteracion: DO $@18 sentCompuesta $@19 WHILE '(' expresion $@20 ')' ';'

   96 expOrDeclaracion: TIPODATO IDENTIFICADOR '=' expresion
   97                 | expOP
   98                 | error

   99 expOP: expresion
  100      | /* vacío */

  101 $@21: /* vacío */

  102 $@22: /* vacío */

  103 sentenciaDeclaracion: TIPODATO listaDeIdentificadores $@21 finalizador $@22
  104                     | error finalizador

  105 listaDeIdentificadores: identificadoryAsignacion
  106                       | listaDeIdentificadores ',' identificadoryAsignacion

  107 identificadoryAsignacion: IDENTIFICADOR opcional
  108                         | IDENTIFICADOR opcional '=' expresion
  109                         | '*' IDENTIFICADOR
  110                         | '*' IDENTIFICADOR '=' expresion
  111                         | NUM opcional
  112                         | error

  113 opcional: '[' ']'
  114         | '[' NUM ']'
  115         | /* vacío */

  116 finalizador: ';'
  117            | error

  118 $@23: /* vacío */

  119 declaracionyDefinicionDeFunciones: TIPODATO IDENTIFICADOR '(' $@23 parametros cuerpo
  120                                  | error '(' ')' cuerpo

  121 parametros: listaDeParametros ')'
  122           | ')'

  123 listaDeParametros: parametro
  124                  | listaDeParametros ',' parametro

  125 parametro: TIPODATO IDENTIFICADOR
  126          | TIPODATO
  127          | error

  128 cuerpo: ';'
  129       | sentCompuesta
  130       | error

  131 opcionSalto: '\n'
  132            | opcionSalto '\n'
  133            | /* vacío */


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 131 132
'!' (33) 41
'%' (37) 30
'&' (38) 39
'(' (40) 45 50 70 74 77 81 87 91 95 119 120
')' (41) 45 50 70 74 77 81 87 91 95 120 121 122
'*' (42) 28 40 109 110
'+' (43) 26
',' (44) 47 106 124
'-' (45) 27
'/' (47) 29
';' (59) 60 66 87 95 116 128
'<' (60) 20
'=' (61) 9 96 108 110
'>' (62) 21
'[' (91) 44 113 114
']' (93) 44 113 114
'{' (123) 62 77
'}' (125) 62 77
error (256) 8 15 31 38 42 54 61 77 98 104 112 117 120 127 130
IDENTIFICADOR (258) 53 96 107 108 109 110 119 125
NUM (259) 49 111 114
CCARACTER (260) 51
LITERALESCADENA (261) 52
TIPODATO (262) 96 103 119 125 126
IF (263) 70 77
ELSEIF (264) 81
ELSE (265) 83
SWITCH (266) 74
DO (267) 95
WHILE (268) 91 95
FOR (269) 87
RETURN (270) 60
OR (271) 18
AND (272) 19
INCREMENTO (273) 36
DECREMENTO (274) 37
SUMAASIGNACION (275) 10
RESTAASIGNACION (276) 11
MULTIASIGNACION (277) 12
DIVASIGNACION (278) 13
RESTOASIGNACION (279) 14
MENORIGUAL (280) 22
MAYORIGUAL (281) 23
IGUALDAD (282) 25
DISTINTO (283) 24


No terminales con las reglas donde aparecen

$accept (48)
    en la izquierda: 0
input (49)
    en la izquierda: 1 2, en la derecha: 0 2
line (50)
    en la izquierda: 3 4 5, en la derecha: 2
expresion (51)
    en la izquierda: 6 7 8, en la derecha: 7 44 46 47 50 66 70 74 81
    91 95 96 99 108 110
operAsignacion (52)
    en la izquierda: 9 10 11 12 13 14 15, en la derecha: 7
expBinaria (53)
    en la izquierda: 16 17, en la derecha: 6 17
operBinario (54)
    en la izquierda: 18 19 20 21 22 23 24 25 26 27 28 29 30 31, en la derecha:
    17
expUnaria (55)
    en la izquierda: 32 33 34 35, en la derecha: 16 17 33 34 35
incremento (56)
    en la izquierda: 36 37 38, en la derecha: 34 35
operUnario (57)
    en la izquierda: 39 40 41 42, en la derecha: 33
expPostfijo (58)
    en la izquierda: 43 44 45, en la derecha: 7 32 44 45
listaDeArgumentos (59)
    en la izquierda: 46 47 48, en la derecha: 45 47
expPrimaria (60)
    en la izquierda: 49 50 51 52 53 54, en la derecha: 43
sentencia (61)
    en la izquierda: 55 56 57 58 59 60 61, en la derecha: 5 63 64
sentCompuesta (62)
    en la izquierda: 62, en la derecha: 55 70 74 81 83 87 91 95 129
listaSentencias (63)
    en la izquierda: 63 64 65, en la derecha: 62 63
sentExpresion (64)
    en la izquierda: 66, en la derecha: 56
sentSeleccion (65)
    en la izquierda: 70 74 77, en la derecha: 57
$@1 (66)
    en la izquierda: 67, en la derecha: 70
$@2 (67)
    en la izquierda: 68, en la derecha: 70
$@3 (68)
    en la izquierda: 69, en la derecha: 70
$@4 (69)
    en la izquierda: 71, en la derecha: 74
$@5 (70)
    en la izquierda: 72, en la derecha: 74
$@6 (71)
    en la izquierda: 73, en la derecha: 74
$@7 (72)
    en la izquierda: 75, en la derecha: 77
$@8 (73)
    en la izquierda: 76, en la derecha: 77
estructuraif (74)
    en la izquierda: 81 83 84, en la derecha: 70 77 81
$@9 (75)
    en la izquierda: 78, en la derecha: 81
$@10 (76)
    en la izquierda: 79, en la derecha: 81
$@11 (77)
    en la izquierda: 80, en la derecha: 81
$@12 (78)
    en la izquierda: 82, en la derecha: 83
sentIteracion (79)
    en la izquierda: 87 91 95, en la derecha: 58
$@13 (80)
    en la izquierda: 85, en la derecha: 87
$@14 (81)
    en la izquierda: 86, en la derecha: 87
$@15 (82)
    en la izquierda: 88, en la derecha: 91
$@16 (83)
    en la izquierda: 89, en la derecha: 91
$@17 (84)
    en la izquierda: 90, en la derecha: 91
$@18 (85)
    en la izquierda: 92, en la derecha: 95
$@19 (86)
    en la izquierda: 93, en la derecha: 95
$@20 (87)
    en la izquierda: 94, en la derecha: 95
expOrDeclaracion (88)
    en la izquierda: 96 97 98, en la derecha: 87
expOP (89)
    en la izquierda: 99 100, en la derecha: 60 87 97
sentenciaDeclaracion (90)
    en la izquierda: 103 104, en la derecha: 59
$@21 (91)
    en la izquierda: 101, en la derecha: 103
$@22 (92)
    en la izquierda: 102, en la derecha: 103
listaDeIdentificadores (93)
    en la izquierda: 105 106, en la derecha: 103 106
identificadoryAsignacion (94)
    en la izquierda: 107 108 109 110 111 112, en la derecha: 105 106
opcional (95)
    en la izquierda: 113 114 115, en la derecha: 107 108 111
finalizador (96)
    en la izquierda: 116 117, en la derecha: 103 104
declaracionyDefinicionDeFunciones (97)
    en la izquierda: 119 120, en la derecha: 4
$@23 (98)
    en la izquierda: 118, en la derecha: 119
parametros (99)
    en la izquierda: 121 122, en la derecha: 119
listaDeParametros (100)
    en la izquierda: 123 124, en la derecha: 121 124
parametro (101)
    en la izquierda: 125 126 127, en la derecha: 123 124
cuerpo (102)
    en la izquierda: 128 129 130, en la derecha: 119 120
opcionSalto (103)
    en la izquierda: 131 132 133, en la derecha: 62 63 64 132


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end             desplazar e ir al estado 2
    error            desplazar e ir al estado 3
    IDENTIFICADOR    desplazar e ir al estado 4
    NUM              desplazar e ir al estado 5
    CCARACTER        desplazar e ir al estado 6
    LITERALESCADENA  desplazar e ir al estado 7
    TIPODATO         desplazar e ir al estado 8
    IF               desplazar e ir al estado 9
    SWITCH           desplazar e ir al estado 10
    DO               desplazar e ir al estado 11
    WHILE            desplazar e ir al estado 12
    FOR              desplazar e ir al estado 13
    RETURN           desplazar e ir al estado 14
    INCREMENTO       desplazar e ir al estado 15
    DECREMENTO       desplazar e ir al estado 16
    '\n'             desplazar e ir al estado 17
    '*'              desplazar e ir al estado 18
    '&'              desplazar e ir al estado 19
    '!'              desplazar e ir al estado 20
    '('              desplazar e ir al estado 21
    '{'              desplazar e ir al estado 22

    line                               ir al estado 23
    expresion                          ir al estado 24
    expBinaria                         ir al estado 25
    expUnaria                          ir al estado 26
    incremento                         ir al estado 27
    operUnario                         ir al estado 28
    expPostfijo                        ir al estado 29
    expPrimaria                        ir al estado 30
    sentencia                          ir al estado 31
    sentCompuesta                      ir al estado 32
    sentExpresion                      ir al estado 33
    sentSeleccion                      ir al estado 34
    sentIteracion                      ir al estado 35
    sentenciaDeclaracion               ir al estado 36
    declaracionyDefinicionDeFunciones  ir al estado 37


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    8 expresion: error .
   38 incremento: error .
   42 operUnario: error .
   54 expPrimaria: error .
   61 sentencia: error .
  104 sentenciaDeclaracion: error . finalizador
  120 declaracionyDefinicionDeFunciones: error . '(' ')' cuerpo

    error  desplazar e ir al estado 38
    '('    desplazar e ir al estado 39
    ';'    desplazar e ir al estado 40

    $end             reduce usando la regla 61 (sentencia)
    error            [reduce usando la regla 38 (incremento)]
    error            [reduce usando la regla 42 (operUnario)]
    error            [reduce usando la regla 54 (expPrimaria)]
    error            [reduce usando la regla 61 (sentencia)]
    IDENTIFICADOR    reduce usando la regla 38 (incremento)
    IDENTIFICADOR    [reduce usando la regla 42 (operUnario)]
    IDENTIFICADOR    [reduce usando la regla 61 (sentencia)]
    NUM              reduce usando la regla 38 (incremento)
    NUM              [reduce usando la regla 42 (operUnario)]
    NUM              [reduce usando la regla 61 (sentencia)]
    CCARACTER        reduce usando la regla 38 (incremento)
    CCARACTER        [reduce usando la regla 42 (operUnario)]
    CCARACTER        [reduce usando la regla 61 (sentencia)]
    LITERALESCADENA  reduce usando la regla 38 (incremento)
    LITERALESCADENA  [reduce usando la regla 42 (operUnario)]
    LITERALESCADENA  [reduce usando la regla 61 (sentencia)]
    TIPODATO         reduce usando la regla 61 (sentencia)
    IF               reduce usando la regla 61 (sentencia)
    SWITCH           reduce usando la regla 61 (sentencia)
    DO               reduce usando la regla 61 (sentencia)
    WHILE            reduce usando la regla 61 (sentencia)
    FOR              reduce usando la regla 61 (sentencia)
    RETURN           reduce usando la regla 61 (sentencia)
    OR               reduce usando la regla 54 (expPrimaria)
    AND              reduce usando la regla 54 (expPrimaria)
    INCREMENTO       reduce usando la regla 38 (incremento)
    INCREMENTO       [reduce usando la regla 42 (operUnario)]
    INCREMENTO       [reduce usando la regla 54 (expPrimaria)]
    INCREMENTO       [reduce usando la regla 61 (sentencia)]
    DECREMENTO       reduce usando la regla 38 (incremento)
    DECREMENTO       [reduce usando la regla 42 (operUnario)]
    DECREMENTO       [reduce usando la regla 54 (expPrimaria)]
    DECREMENTO       [reduce usando la regla 61 (sentencia)]
    SUMAASIGNACION   reduce usando la regla 54 (expPrimaria)
    RESTAASIGNACION  reduce usando la regla 54 (expPrimaria)
    MULTIASIGNACION  reduce usando la regla 54 (expPrimaria)
    DIVASIGNACION    reduce usando la regla 54 (expPrimaria)
    RESTOASIGNACION  reduce usando la regla 54 (expPrimaria)
    MENORIGUAL       reduce usando la regla 54 (expPrimaria)
    MAYORIGUAL       reduce usando la regla 54 (expPrimaria)
    IGUALDAD         reduce usando la regla 54 (expPrimaria)
    DISTINTO         reduce usando la regla 54 (expPrimaria)
    '\n'             reduce usando la regla 61 (sentencia)
    '='              reduce usando la regla 54 (expPrimaria)
    '<'              reduce usando la regla 54 (expPrimaria)
    '>'              reduce usando la regla 54 (expPrimaria)
    '+'              reduce usando la regla 54 (expPrimaria)
    '-'              reduce usando la regla 54 (expPrimaria)
    '*'              reduce usando la regla 38 (incremento)
    '*'              [reduce usando la regla 42 (operUnario)]
    '*'              [reduce usando la regla 54 (expPrimaria)]
    '*'              [reduce usando la regla 61 (sentencia)]
    '/'              reduce usando la regla 54 (expPrimaria)
    '%'              reduce usando la regla 54 (expPrimaria)
    '&'              reduce usando la regla 38 (incremento)
    '&'              [reduce usando la regla 42 (operUnario)]
    '&'              [reduce usando la regla 61 (sentencia)]
    '!'              reduce usando la regla 38 (incremento)
    '!'              [reduce usando la regla 42 (operUnario)]
    '!'              [reduce usando la regla 61 (sentencia)]
    '['              reduce usando la regla 54 (expPrimaria)
    '('              [reduce usando la regla 38 (incremento)]
    '('              [reduce usando la regla 42 (operUnario)]
    '('              [reduce usando la regla 54 (expPrimaria)]
    '('              [reduce usando la regla 61 (sentencia)]
    ';'              [reduce usando la regla 8 (expresion)]
    ';'              [reduce usando la regla 54 (expPrimaria)]
    '{'              reduce usando la regla 61 (sentencia)

    finalizador  ir al estado 41


estado 4

   53 expPrimaria: IDENTIFICADOR .

    $default  reduce usando la regla 53 (expPrimaria)


estado 5

   49 expPrimaria: NUM .

    $default  reduce usando la regla 49 (expPrimaria)


estado 6

   51 expPrimaria: CCARACTER .

    $default  reduce usando la regla 51 (expPrimaria)


estado 7

   52 expPrimaria: LITERALESCADENA .

    $default  reduce usando la regla 52 (expPrimaria)


estado 8

  103 sentenciaDeclaracion: TIPODATO . listaDeIdentificadores $@21 finalizador $@22
  119 declaracionyDefinicionDeFunciones: TIPODATO . IDENTIFICADOR '(' $@23 parametros cuerpo

    error          desplazar e ir al estado 42
    IDENTIFICADOR  desplazar e ir al estado 43
    NUM            desplazar e ir al estado 44
    '*'            desplazar e ir al estado 45

    listaDeIdentificadores    ir al estado 46
    identificadoryAsignacion  ir al estado 47


estado 9

   70 sentSeleccion: IF . $@1 '(' expresion ')' $@2 sentCompuesta $@3 estructuraif
   77              | IF . '(' error $@7 ')' '{' '}' estructuraif $@8

    '('  desplazar e ir al estado 48

    '('  [reduce usando la regla 67 ($@1)]

    $@1  ir al estado 49


estado 10

   74 sentSeleccion: SWITCH . $@4 '(' expresion ')' $@5 sentCompuesta $@6

    $default  reduce usando la regla 71 ($@4)

    $@4  ir al estado 50


estado 11

   95 sentIteracion: DO . $@18 sentCompuesta $@19 WHILE '(' expresion $@20 ')' ';'

    $default  reduce usando la regla 92 ($@18)

    $@18  ir al estado 51


estado 12

   91 sentIteracion: WHILE . $@15 '(' expresion $@16 ')' sentCompuesta $@17

    $default  reduce usando la regla 88 ($@15)

    $@15  ir al estado 52


estado 13

   87 sentIteracion: FOR . $@13 '(' expOrDeclaracion ';' expOP ';' expOP ')' sentCompuesta $@14

    $default  reduce usando la regla 85 ($@13)

    $@13  ir al estado 53


estado 14

   60 sentencia: RETURN . expOP ';'

    error            desplazar e ir al estado 54
    IDENTIFICADOR    desplazar e ir al estado 4
    NUM              desplazar e ir al estado 5
    CCARACTER        desplazar e ir al estado 6
    LITERALESCADENA  desplazar e ir al estado 7
    INCREMENTO       desplazar e ir al estado 15
    DECREMENTO       desplazar e ir al estado 16
    '*'              desplazar e ir al estado 18
    '&'              desplazar e ir al estado 19
    '!'              desplazar e ir al estado 20
    '('              desplazar e ir al estado 21

    ';'  reduce usando la regla 100 (expOP)

    expresion    ir al estado 55
    expBinaria   ir al estado 25
    expUnaria    ir al estado 26
    incremento   ir al estado 27
    operUnario   ir al estado 28
    expPostfijo  ir al estado 29
    expPrimaria  ir al estado 30
    expOP        ir al estado 56


estado 15

   36 incremento: INCREMENTO .

    $default  reduce usando la regla 36 (incremento)


estado 16

   37 incremento: DECREMENTO .

    $default  reduce usando la regla 37 (incremento)


estado 17

    3 line: '\n' .

    $default  reduce usando la regla 3 (line)


estado 18

   40 operUnario: '*' .

    $default  reduce usando la regla 40 (operUnario)


estado 19

   39 operUnario: '&' .

    $default  reduce usando la regla 39 (operUnario)


estado 20

   41 operUnario: '!' .

    $default  reduce usando la regla 41 (operUnario)


estado 21

   50 expPrimaria: '(' . expresion ')'

    error            desplazar e ir al estado 54
    IDENTIFICADOR    desplazar e ir al estado 4
    NUM              desplazar e ir al estado 5
    CCARACTER        desplazar e ir al estado 6
    LITERALESCADENA  desplazar e ir al estado 7
    INCREMENTO       desplazar e ir al estado 15
    DECREMENTO       desplazar e ir al estado 16
    '*'              desplazar e ir al estado 18
    '&'              desplazar e ir al estado 19
    '!'              desplazar e ir al estado 20
    '('              desplazar e ir al estado 21

    expresion    ir al estado 57
    expBinaria   ir al estado 25
    expUnaria    ir al estado 26
    incremento   ir al estado 27
    operUnario   ir al estado 28
    expPostfijo  ir al estado 29
    expPrimaria  ir al estado 30


estado 22

   62 sentCompuesta: '{' . opcionSalto listaSentencias '}'

    '\n'  desplazar e ir al estado 58

    '\n'      [reduce usando la regla 133 (opcionSalto)]
    $default  reduce usando la regla 133 (opcionSalto)

    opcionSalto  ir al estado 59


estado 23

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 24

   66 sentExpresion: expresion . ';'

    ';'  desplazar e ir al estado 60


estado 25

    6 expresion: expBinaria .

    $default  reduce usando la regla 6 (expresion)


estado 26

   16 expBinaria: expUnaria .
   17           | expUnaria . operBinario expBinaria
   35 expUnaria: expUnaria . incremento

    error       desplazar e ir al estado 61
    OR          desplazar e ir al estado 62
    AND         desplazar e ir al estado 63
    INCREMENTO  desplazar e ir al estado 15
    DECREMENTO  desplazar e ir al estado 16
    MENORIGUAL  desplazar e ir al estado 64
    MAYORIGUAL  desplazar e ir al estado 65
    IGUALDAD    desplazar e ir al estado 66
    DISTINTO    desplazar e ir al estado 67
    '<'         desplazar e ir al estado 68
    '>'         desplazar e ir al estado 69
    '+'         desplazar e ir al estado 70
    '-'         desplazar e ir al estado 71
    '*'         desplazar e ir al estado 72
    '/'         desplazar e ir al estado 73
    '%'         desplazar e ir al estado 74

    error  [reduce usando la regla 16 (expBinaria)]
    ']'    reduce usando la regla 16 (expBinaria)
    ')'    reduce usando la regla 16 (expBinaria)
    ','    reduce usando la regla 16 (expBinaria)
    ';'    reduce usando la regla 16 (expBinaria)

    operBinario  ir al estado 75
    incremento   ir al estado 76


estado 27

   34 expUnaria: incremento . expUnaria

    error            desplazar e ir al estado 77
    IDENTIFICADOR    desplazar e ir al estado 4
    NUM              desplazar e ir al estado 5
    CCARACTER        desplazar e ir al estado 6
    LITERALESCADENA  desplazar e ir al estado 7
    INCREMENTO       desplazar e ir al estado 15
    DECREMENTO       desplazar e ir al estado 16
    '*'              desplazar e ir al estado 18
    '&'              desplazar e ir al estado 19
    '!'              desplazar e ir al estado 20
    '('              desplazar e ir al estado 21

    expUnaria    ir al estado 78
    incremento   ir al estado 27
    operUnario   ir al estado 28
    expPostfijo  ir al estado 79
    expPrimaria  ir al estado 30


estado 28

   33 expUnaria: operUnario . expUnaria

    error            desplazar e ir al estado 77
    IDENTIFICADOR    desplazar e ir al estado 4
    NUM              desplazar e ir al estado 5
    CCARACTER        desplazar e ir al estado 6
    LITERALESCADENA  desplazar e ir al estado 7
    INCREMENTO       desplazar e ir al estado 15
    DECREMENTO       desplazar e ir al estado 16
    '*'              desplazar e ir al estado 18
    '&'              desplazar e ir al estado 19
    '!'              desplazar e ir al estado 20
    '('              desplazar e ir al estado 21

    expUnaria    ir al estado 80
    incremento   ir al estado 27
    operUnario   ir al estado 28
    expPostfijo  ir al estado 79
    expPrimaria  ir al estado 30


estado 29

    7 expresion: expPostfijo . operAsignacion expresion
   32 expUnaria: expPostfijo .
   44 expPostfijo: expPostfijo . '[' expresion ']'
   45            | expPostfijo . '(' listaDeArgumentos ')'

    error            desplazar e ir al estado 81
    SUMAASIGNACION   desplazar e ir al estado 82
    RESTAASIGNACION  desplazar e ir al estado 83
    MULTIASIGNACION  desplazar e ir al estado 84
    DIVASIGNACION    desplazar e ir al estado 85
    RESTOASIGNACION  desplazar e ir al estado 86
    '='              desplazar e ir al estado 87
    '['              desplazar e ir al estado 88
    '('              desplazar e ir al estado 89

    error       [reduce usando la regla 32 (expUnaria)]
    OR          reduce usando la regla 32 (expUnaria)
    AND         reduce usando la regla 32 (expUnaria)
    INCREMENTO  reduce usando la regla 32 (expUnaria)
    DECREMENTO  reduce usando la regla 32 (expUnaria)
    MENORIGUAL  reduce usando la regla 32 (expUnaria)
    MAYORIGUAL  reduce usando la regla 32 (expUnaria)
    IGUALDAD    reduce usando la regla 32 (expUnaria)
    DISTINTO    reduce usando la regla 32 (expUnaria)
    '<'         reduce usando la regla 32 (expUnaria)
    '>'         reduce usando la regla 32 (expUnaria)
    '+'         reduce usando la regla 32 (expUnaria)
    '-'         reduce usando la regla 32 (expUnaria)
    '*'         reduce usando la regla 32 (expUnaria)
    '/'         reduce usando la regla 32 (expUnaria)
    '%'         reduce usando la regla 32 (expUnaria)
    ']'         reduce usando la regla 32 (expUnaria)
    ')'         reduce usando la regla 32 (expUnaria)
    ','         reduce usando la regla 32 (expUnaria)
    ';'         reduce usando la regla 32 (expUnaria)

    operAsignacion  ir al estado 90


estado 30

   43 expPostfijo: expPrimaria .

    $default  reduce usando la regla 43 (expPostfijo)


estado 31

    5 line: sentencia .

    $default  reduce usando la regla 5 (line)


estado 32

   55 sentencia: sentCompuesta .

    $default  reduce usando la regla 55 (sentencia)


estado 33

   56 sentencia: sentExpresion .

    $default  reduce usando la regla 56 (sentencia)


estado 34

   57 sentencia: sentSeleccion .

    $default  reduce usando la regla 57 (sentencia)


estado 35

   58 sentencia: sentIteracion .

    $default  reduce usando la regla 58 (sentencia)


estado 36

   59 sentencia: sentenciaDeclaracion .

    $default  reduce usando la regla 59 (sentencia)


estado 37

    4 line: declaracionyDefinicionDeFunciones .

    $default  reduce usando la regla 4 (line)


estado 38

  117 finalizador: error .

    $default  reduce usando la regla 117 (finalizador)


estado 39

  120 declaracionyDefinicionDeFunciones: error '(' . ')' cuerpo

    ')'  desplazar e ir al estado 91


estado 40

  116 finalizador: ';' .

    $default  reduce usando la regla 116 (finalizador)


estado 41

  104 sentenciaDeclaracion: error finalizador .

    $default  reduce usando la regla 104 (sentenciaDeclaracion)


estado 42

  112 identificadoryAsignacion: error .

    $default  reduce usando la regla 112 (identificadoryAsignacion)


estado 43

  107 identificadoryAsignacion: IDENTIFICADOR . opcional
  108                         | IDENTIFICADOR . opcional '=' expresion
  119 declaracionyDefinicionDeFunciones: TIPODATO IDENTIFICADOR . '(' $@23 parametros cuerpo

    '['  desplazar e ir al estado 92
    '('  desplazar e ir al estado 93

    $default  reduce usando la regla 115 (opcional)

    opcional  ir al estado 94


estado 44

  111 identificadoryAsignacion: NUM . opcional

    '['  desplazar e ir al estado 92

    $default  reduce usando la regla 115 (opcional)

    opcional  ir al estado 95


estado 45

  109 identificadoryAsignacion: '*' . IDENTIFICADOR
  110                         | '*' . IDENTIFICADOR '=' expresion

    IDENTIFICADOR  desplazar e ir al estado 96


estado 46

  103 sentenciaDeclaracion: TIPODATO listaDeIdentificadores . $@21 finalizador $@22
  106 listaDeIdentificadores: listaDeIdentificadores . ',' identificadoryAsignacion

    ','  desplazar e ir al estado 97

    $default  reduce usando la regla 101 ($@21)

    $@21  ir al estado 98


estado 47

  105 listaDeIdentificadores: identificadoryAsignacion .

    $default  reduce usando la regla 105 (listaDeIdentificadores)


estado 48

   77 sentSeleccion: IF '(' . error $@7 ')' '{' '}' estructuraif $@8

    error  desplazar e ir al estado 99


estado 49

   70 sentSeleccion: IF $@1 . '(' expresion ')' $@2 sentCompuesta $@3 estructuraif

    '('  desplazar e ir al estado 100


estado 50

   74 sentSeleccion: SWITCH $@4 . '(' expresion ')' $@5 sentCompuesta $@6

    '('  desplazar e ir al estado 101


estado 51

   95 sentIteracion: DO $@18 . sentCompuesta $@19 WHILE '(' expresion $@20 ')' ';'

    '{'  desplazar e ir al estado 22

    sentCompuesta  ir al estado 102


estado 52

   91 sentIteracion: WHILE $@15 . '(' expresion $@16 ')' sentCompuesta $@17

    '('  desplazar e ir al estado 103


estado 53

   87 sentIteracion: FOR $@13 . '(' expOrDeclaracion ';' expOP ';' expOP ')' sentCompuesta $@14

    '('  desplazar e ir al estado 104


estado 54

    8 expresion: error .
   38 incremento: error .
   42 operUnario: error .
   54 expPrimaria: error .

    error            reduce usando la regla 8 (expresion)
    error            [reduce usando la regla 38 (incremento)]
    error            [reduce usando la regla 42 (operUnario)]
    error            [reduce usando la regla 54 (expPrimaria)]
    IDENTIFICADOR    reduce usando la regla 38 (incremento)
    IDENTIFICADOR    [reduce usando la regla 42 (operUnario)]
    NUM              reduce usando la regla 38 (incremento)
    NUM              [reduce usando la regla 42 (operUnario)]
    CCARACTER        reduce usando la regla 38 (incremento)
    CCARACTER        [reduce usando la regla 42 (operUnario)]
    LITERALESCADENA  reduce usando la regla 38 (incremento)
    LITERALESCADENA  [reduce usando la regla 42 (operUnario)]
    INCREMENTO       reduce usando la regla 38 (incremento)
    INCREMENTO       [reduce usando la regla 42 (operUnario)]
    INCREMENTO       [reduce usando la regla 54 (expPrimaria)]
    DECREMENTO       reduce usando la regla 38 (incremento)
    DECREMENTO       [reduce usando la regla 42 (operUnario)]
    DECREMENTO       [reduce usando la regla 54 (expPrimaria)]
    '*'              reduce usando la regla 38 (incremento)
    '*'              [reduce usando la regla 42 (operUnario)]
    '*'              [reduce usando la regla 54 (expPrimaria)]
    '&'              reduce usando la regla 38 (incremento)
    '&'              [reduce usando la regla 42 (operUnario)]
    '!'              reduce usando la regla 38 (incremento)
    '!'              [reduce usando la regla 42 (operUnario)]
    ']'              reduce usando la regla 8 (expresion)
    ']'              [reduce usando la regla 54 (expPrimaria)]
    '('              reduce usando la regla 38 (incremento)
    '('              [reduce usando la regla 42 (operUnario)]
    '('              [reduce usando la regla 54 (expPrimaria)]
    ')'              reduce usando la regla 8 (expresion)
    ')'              [reduce usando la regla 54 (expPrimaria)]
    ','              reduce usando la regla 8 (expresion)
    ','              [reduce usando la regla 54 (expPrimaria)]
    ';'              reduce usando la regla 8 (expresion)
    ';'              [reduce usando la regla 54 (expPrimaria)]
    $default         reduce usando la regla 54 (expPrimaria)


estado 55

   99 expOP: expresion .

    $default  reduce usando la regla 99 (expOP)


estado 56

   60 sentencia: RETURN expOP . ';'

    ';'  desplazar e ir al estado 105


estado 57

   50 expPrimaria: '(' expresion . ')'

    ')'  desplazar e ir al estado 106


estado 58

  131 opcionSalto: '\n' .

    $default  reduce usando la regla 131 (opcionSalto)


estado 59

   62 sentCompuesta: '{' opcionSalto . listaSentencias '}'
  132 opcionSalto: opcionSalto . '\n'
